--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 
     <main>
       <section class="current">
-        <div class="temp" id="root">26°C</div>
+        <div class="temp" id="root">??</div>
         <div class="details" id="details">
-          <div class="location" id="country" style="font-size:3vw;">Ikeja</div>
-          <div class="temp" id="temp" style="font-size:4vw;">9:09 AM - Thursday, December 15, 2022</div>
-          <div class="condition" id="condition" style="font-size:3vw;">Mist</div>
+          <div class="location" id="country" style="font-size:3vw;">??</div>
+          <div class="temp" id="temp" style="font-size:4vw;">??</div>
+          <div class="condition" id="condition" style="font-size:3vw;">??</div>
         </div>
-        <div class="country" id="country">26°C</div>
+        <div class="country" id="country"></div>
       </section>
 
       <section class="forecast">
         <div class="card">
           <h4>Humidity</h4>
-          <p id="humidity">Humidity: 63%</p>
+          <p id="humidity"></p>
         </div>
         <div class="card">
           <h4>💡 Pressure</h4>
-          <p id="pressure">Humidity: 62%</p>
+          <p id="pressure"></p>
         </div>
         <div class="card">
           <h4>💨 Wind</h4>
-          <p id="windSpeed">Humidity: 67%</p>
+          <p id="windSpeed"></p>
         </div>
       </section>
 
